--- a/.github/workflows/movemate-app.yml
+++ b/.github/workflows/movemate-app.yml
@@ -1,42 +1,35 @@
-name: Flutter CI/CD
+# This is a basic workflow to help you get started with Actions
 
-on:
-  push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
+name: Build Example App
 
+# Controls when the action will run. Triggers the workflow on push or pull request 
+# events but only for the master branch
+on: [push, pull_request]
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  # This workflow contains a single job called "build"
   build:
-    name: Build Android and iOS
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, 'ci skip')"
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v7
-        with:
-          flutter-version: '2.x' # Adjust to your Flutter version
-
-      - name: Install dependencies
-        run: flutter pub get
-
-      - name: Build Android APK
-        run: flutter build apk
-
-      - name: Build iOS app
-        run: flutter build ios
-
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: build-artifacts
-          path: |
-            build/app/outputs/flutter-apk # Adjust the path to your build artifacts
-            build/ios/Runner.app
-
-  # Add additional steps for deployment if needed
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    - uses: actions/checkout@v2
+    - uses: actions/setup-java@v1
+      with:
+        java-version: '12.x'
+    - uses: subosito/flutter-action@v1
+      with:
+        channel: 'stable' # or: 'dev' or 'beta'
+    - run: flutter pub get
+      working-directory: |
+    #- run: flutter test
+    - run: flutter build apk --debug --verbose
+      working-directory: example/
+    - uses: actions/upload-artifact@v1
+      with:
+        name: movemate-apk-debug
+        path: |
